--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,45 @@
+*{
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  text-decoration: none;
+
+}
+
 body {
   font-family: Gill Sans, sans-serif;
-  background-color: salmon;
-  text-align: center;
+  background-color: #eee;
+  margin: 0px;
+  padding: 0px;
+}
+
+.header{
+
+}
+.header_content{
+
+}
+.nav{
+  width: 100%;
+  height: 100px;
+  background-color: gray;
+  display: flex;
+  justify-content: space-between;
+
+}
+.nav_list{
+  display: inline-block;
+  margin-right: 5rem;
+}
+.nav_item{
+  list-style: none;
+  float: left;
+  line-height: 100px;
+}
+.nav_link{
+  display: flex;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  gap: 2rem;
 }
