--- a/css/animalwebpageJimmy.css
+++ b/css/animalwebpageJimmy.css
@@ -12,13 +12,7 @@
 	margin: 0px;
 	padding: 0px;
   }
-  
-  .header{
-  
-  }
-  .header_content{
-  
-  }
+
   .nav{
 	width: 100%;
 	height: 100px;
@@ -115,6 +109,8 @@
 	background-color: rgb(202, 216, 245);
   }
   #fact1{
+	display:grid;
+	grid-template-rows: 20% 25% 25% 25%;
   }
   #fact2{
 	display: grid;
