--- a/css/animalwebpageJimmy.css
+++ b/css/animalwebpageJimmy.css
@@ -8,7 +8,6 @@
   
   body {
 	font-family: Gill Sans, sans-serif;
-	background-color: #eee;
 	margin: 0px;
 	padding: 0px;
   }
@@ -38,6 +37,7 @@
 	gap: 2rem;
   }
   .animal_heading{
+	opacity: 85%;
 	font-size: 50px;
 	background-color: #3e72ab;
   }
@@ -46,7 +46,6 @@
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
 	grid-template-rows: repeat(4, 200px);
-	background-color: #4c4e62;
   }
   .image{
 	margin-top: 20px;
@@ -60,6 +59,7 @@
 
   }
   .about{
+	opacity: 90%;
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
 	grid-template-rows: 20% auto;
@@ -77,6 +77,7 @@
 	background-color: rgb(165, 190, 239);
   }
   .facts{
+	opacity: 85%;
 	display: grid;
 	margin-top: 65px;
   	grid-template-rows: repeat(3, 150px);
