added heading w/ animal name

--- a/css/kangoroo.css
+++ b/css/kangoroo.css
@@ -84,3 +84,9 @@
     background-image: url('../img/Kangofood.png'); 
 
 }
+
+.animal_heading{
+	opacity: 85%;
+	font-size: 50px;
+	background-color: #3e72ab;
+  }
