--- a/css/penguin.css
+++ b/css/penguin.css
@@ -85,3 +85,9 @@
     background-image: url('../img/diet.png'); 
 
   }
+
+  .animal_heading{
+    opacity: 85%;
+    font-size: 50px;
+    background-color: #3e72ab;
+    }
