--- a/css/animalwebpageJimmy.css
+++ b/css/animalwebpageJimmy.css
@@ -15,7 +15,7 @@
   .nav{
 	width: 100%;
 	height: 100px;
-	background-color: gray;
+	background-color: rgb(13, 79, 120);
 	display: flex;
 	justify-content: space-between;
   
