--- a/css/index.css
+++ b/css/index.css
@@ -13,16 +13,11 @@ body {
   padding: 0px;
 }
 
-.header{
 
-}
-.header_content{
-
-}
 .nav{
   width: 100%;
   height: 100px;
-  background-color: gray;
+  background-color: rgb(13, 79, 120);
   display: flex;
   justify-content: space-between;
 
@@ -45,12 +40,13 @@ body {
 }
 .imgcontainer {
   background-image: url('../img/Safari.png');
-  height: 600px; 
+  height: 700px; 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover; 
   position: relative;
   width: 100%;
+  max-height: 100%;
 }
 .text{
   position: relative; 
@@ -59,12 +55,12 @@ body {
 
 .text p {
   position: absolute; 
-  font-size: 20; 
+  font-size: 20px; 
   top: 100px; 
   left: 50%; 
   text-align: center;
   transform: translate(-50%, 50%);
-  background-color: rgba(255, 255, 255, 0.4); 
+  background-color: rgba(255, 255, 255, 0.8); 
   padding: 10px; 
 }
 .CardContainer{
@@ -102,6 +98,6 @@ body {
 }
 
 .heading{
-	opacity: 85%;
+	opacity: 90%;
 	background-color: #3e72ab;
   }
