--- a/css/jimmy.css
+++ b/css/jimmy.css
@@ -12,17 +12,10 @@
 	margin: 0px;
 	padding: 0px;
   }
-  
-  .header{
-  
-  }
-  .header_content{
-  
-  }
   .nav{
 	width: 100%;
 	height: 100px;
-	background-color: gray;
+	background-color: rgb(13, 79, 120);
 	display: flex;
 	justify-content: space-between;
   
